--- a/api-passenger/pom.xml
+++ b/api-passenger/pom.xml
@@ -4,24 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.13</version>
+        <groupId>org.online.taxi</groupId>
+        <artifactId>online-taxi-public</artifactId>
+        <version>1.0.1</version>
     </parent>
 
-    <packaging>pom</packaging>
-    <groupId>org.online.taxi</groupId>
-    <artifactId>online-taxi-public</artifactId>
-    <version>1.0.1</version>
-
-    <modules>
-        <module>api-passenger</module>
-    </modules>
+    <artifactId>api-passenger</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
